# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "toml-frontmatter"
description = "TOML frontmatter parser."
repository = "https://git.bauke.xyz/Holllo/toml-frontmatter"
license = "MIT OR Apache-2.0"
version = "0.0.0"
authors = ["Holllo <helllo@holllo.org>"]
edition = "2021"

[lib]
path = "source/lib.rs"

[dependencies]
anyhow = "1.0.68"
toml = "0.5.10"

[dependencies.serde]
features = ["derive"]
version = "1.0.152"

[dev-dependencies.insta]
features = ["toml"]
version = "1.24.1"
