# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "toml-frontmatter"
description = "TOML frontmatter parser."
repository = "https://git.bauke.xyz/Holllo/toml-frontmatter"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Holllo <helllo@holllo.org>"]
edition = "2021"

[lib]
path = "source/lib.rs"

[dependencies]
anyhow = "1.0.79"
toml = "0.8.9"

[dependencies.serde]
features = ["derive"]
version = "1.0.196"

[dev-dependencies.insta]
features = ["toml"]
version = "1.34.0"
